--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
 <head>
   <meta name="twitter:" content="">
   <meta charset="utf-8">
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Maher Sattar</title>
 </head>
 
 <body>
+
+  <div>
+    <!-- The video roll section -->
+    <iframe src="https://www.youtube.com/embed/xTxSwy0pwTI?autoplay=1" width="90%" height="550em" allowfullscreen="allowfullscreen"></iframe>
+
+  </div>
 
   <div>
     <!-- The section with the Print work list  -->
@@ -70,6 +83,54 @@
         <li>TOAD</li>
       </ul>
     </div>
+  </div>
+
+  <div class="contact">
+  <!-- the section for the contact form -->
+  <div class="row">
+    <!-- the name phone email i took from  materialize -->
+    <form class="col s12">
+      <!-- the names code took from  materialize -->
+      <div class="row">
+        <div class="input-field col s6">
+          <i class="material-icons prefix">account_circle</i>
+          <input id="first_name" type="text" class="validate">
+          <label for="first_name">First Name</label>
+        </div>
+        <div class="input-field col s6">
+          <input id="last_name" type="text" class="validate">
+          <label for="last_name">Last Name</label>
+        </div>
+      </div>
+
+      <!-- the phone and emeail row code i took from materialize -->
+      <div class="row">
+        <div class="input-field col s4">
+          <i class="material-icons prefix">phone</i>
+          <input id="first_name" type="text" class="validate">
+          <label for="first_name">Phone <span>*</span></label>
+        </div>
+        <div class="input-field col s8">
+          <i class="material-icons prefix">email</i>
+          <input id="email" type="email" class="validate">
+          <label for="email">Email</label>
+        </div>
+      </div>
+
+      <div class="row">
+       <div class="input-field col s11" style="left: 3em">
+         <textarea id="textarea1" class="materialize-textarea" style="height:8em"></textarea>
+         <label for="textarea1">Comment...</label>
+       </div>
+       <div class="input-field col s11" style="left: 3em; margin-top: -1em; margin-bottom: -1em">
+         <a class="btn-floating btn-small waves-effect waves-light #b3d6ff"><i class="material-icons">send</i></a>
+       </div>
+    </div>
+    </form>
+  </div>
+
+
+  <!-- form section ends here -->
   </div>
 
 </body>
